-account modal y overflow hidden -cannot scroll in modal anymore. fixed

--- a/public/assets/style/components/modals.less
+++ b/public/assets/style/components/modals.less
@@ -47,10 +47,12 @@
 	opacity: 1;
 }
 
+.modal-open .modal {
+  overflow-y: hidden;  
+}
+
 
 /* Wallet Codepen CSS  */
-
-
 .app {
   display: -webkit-box;
   display: -webkit-flex;
@@ -64,7 +66,7 @@
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100vh;
+  height: 100%;
 }
 .app_inner {
   background: #FFF;
